Refractor - Add left-border to 'amount-info' element, and made the 'transactions.type' element to stretch and cover the entire available height, to avoid gaps in smaller screen

--- a/src/style.css
+++ b/src/style.css
@@ -55,11 +55,11 @@
     }
 
     .amount-info {
-        @apply flex-row justify-center gap-4;
+        @apply flex-row justify-center gap-4 pl-1.5 border-l-[1.5px] border-black;
     }
 
     .transactions .type {
-        @apply py-1 px-3 text-white;
+        @apply py-1 px-3 text-white self-stretch grid place-items-center;
     }
 
     .transactions .credit {
